# simple-native-ohos

./: README.md  build-profile.json5  copyReadMeFromSubDirectory.sh  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
example/: oh-package-lock.json5  oh-package.json5
example/src/main/: module.json5
example/src/main/ets/: ExampleAbility.ets  HomePage.ets  HomeViewModel.ets
example/src/main/ets/data/: DbManager.ets  MainTableDao.ets  MainTableRow.ets
example/src/main/ets/exampleability/: ExampleAbility.ets
example/src/main/ets/examplebackupability/: ExampleBackupAbility.ets
example/src/main/ets/ui/: ExampleAbility.ets  HomePage.ets  HomeViewModel.ets  Theme.ets
example/src/main/ets/ui/component/: HighlightText.ets  MainTableRowDialog.ets
example/src/main/ets/ui/model/: DataSource.ets  MainTableRowVO.ets
example/src/main/ets/ui/viewmodel/: HomeUiState.ets  HomeViewModel.ets
example/src/main/ets/utils/: MergeNonNull.ts  RandomWords.ets  ZeroWidth.ets
example/src/main/resources/base/element/: string.json
simple_native_ohos/: CHANGELOG.md  README.md  build-profile.json5  oh-package.json5
simple_native_ohos/src/main/cpp/: CMakeLists.txt
simple_ohos/: Index.ets  NOTICE  oh-package-lock.json5  oh-package.json5
simple_ohos/src/main/: module.json5
simple_ohos/src/main/ets/: Simple.ets
sqlite3_simple/: CHANGELOG.md  README.md  SIMPLE.md  oh-package-lock.json5  oh-package.json5
sqlite3_simple/src/main/: module.json5
sqlite3_simple/src/main/ets/: Simple.ets
(+1 files in other folders)
